background image upgrade

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <!-- Banner Section -->
-    <header class="flex flex-col items-end bg-gray-400 pt-52 pr-56 pb-44">
+    <header class="flex flex-col items-end bg-gray-400 pt-52 pr-56 pb-44 bg-[url('./images/lighy.png')]">
         <h1 class="text-[#151414] text-6xl font-bold text-right w-[512px] mb-6 "> All Thinks Are Possible If You
             believe</h1>
         <p class="text-right text-righ w-[500px] text-base text-[#444343] ">There are many variations of passages of
@@ -89,8 +89,8 @@
         </div>
     </section>
     <!-- Contact Section -->
-    <section class="">
-        <div class="bg-red-300 pl-20 h-60 ml-36 mr-36 mt-20 mb-20 rounded-lg">
+    <section class="bg-[url('./images/handgori.png')]  h-60 ml-36 mr-36 mt-20 mb-20 rounded-lg bg-cover ">
+        <div class="rounded-lg bg-gradient-to-r from-[#F15B22] to-[#F15B2200] w-full h-full pl-20">
             <h1 class="font-bold text-[40px] text-white pt-8 mb-5 ">Awlays keep a positive mindset</h1>
             <button class=" bg-white pt-3 pb-3 pl-6 pr-6 rounded-md text-[#F15B22] text-[15px] font-semibold ">Call
                 Now</button>
